src/App.css
@import url("https://db.onlinewebfonts.com/c/1231edf28a4a5623a5098be7ccfeb930?family=Mona-Sans+Narrow");
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400..700;1,400..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
@import "tailwindcss";

#root {
  font-family: "Mona Sans", sans-serif !important;
  background-color: #f3f3f3;
}
.h-tag{
  background-image: linear-gradient(150deg, #5a5a5a, #0e0e0e);
  color: var(--heading);
    letter-spacing: -.01em;
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
    background-clip: text;
    margin-top: 0;
    margin-bottom: 0;
    line-height: 104%;
}
.font-mona-narrow{
  font-family: "Mona Sans Narrow", Impact, sans-serif !important;
  line-height: 1;
  font-weight: 100;
  font-size: 10rem;
}
.btn-bg-primery {
  background-color: #FFC299;
}

.btn-bg-primery:hover {
  background-color: #ffb47d;
}

button {
  cursor: pointer;
}
.font-anton{
  font-family: 'Anton', sans-serif  !important;
  letter-spacing: 0.5rem;
}
.font-handwriting {
  font-family: "Yellowtail", cursive !important;
}

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: #f3f3f3;
  font-family: "Mona Sans", sans-serif !important;
  line-height: 150%;
}



#smooth-wrapper {
  height: 100%;

}

#smooth-content {
  min-height: 200vh;
  /* ensures scrolling exists */
  will-change: transform;
}

.swiper-slide-active .slide-image {
  animation: zoomIn 4s ease-in-out forwards;
}

@keyframes zoomIn {
  from {
    transform: scale(1);
  }

  to {
    transform: scale(1.12);
  }
}

/* fade + slide effect */
.swiper-slide {
  opacity: 1;
  transform: translateX(0);
  transition: all 1s ease;
}

/* Remove default border */
.react-datepicker {
  border: none !important;
  font-family: inherit;
  padding: 10px 0;
}

/* Header alignment */
.react-datepicker__header {
  background: white !important;
  border-bottom: none;
  padding-top: 20px;
  padding-bottom: 0;
}

/* Month titles */
.react-datepicker__current-month {
  font-size: 18px;
  font-weight: 600;
  color: #222;
}

/* Day names (Su Mo Tu…) */
.react-datepicker__day-name {
  color: #7a7a7a !important;
  font-weight: 500;
  font-size: 14px;
  margin-bottom: 12px;
}

/* Regular days */
.react-datepicker__day {
  width: 42px;
  height: 42px;
  line-height: 42px;
  margin: 0;
  border-radius: 50%;
  font-weight: 500;
  color: #333;
}

/* Selected day (start or end) */
.react-datepicker__day--selected {
  background: #4f46e5 !important;
  border-radius: 50% 0 0 50% !important;
  color: white !important;
  line-height: 3 !important;

}

/* Range highlight */
.react-datepicker__day--in-range {
  background: #e7eafe !important;
  color: #111 !important;
  border-radius: 5px !important;
  line-height: 3 !important;
}

/* Range start */
.react-datepicker__day--range-start {
  background: #4f46e5 !important;
  color: white !important;
  border-radius: 50% 0 0 50% !important;
  line-height: 3 !important;
}

/* Range end */
.react-datepicker__day--range-end {
  background: #4f46e5 !important;
  color: white !important;
  border-radius: 0 50% 50% 0 !important;
  line-height: 3 !important;
}

.react-datepicker__day {
  line-height: 3 !important;
}

/* Remove hover effect */
.react-datepicker__day:hover {
  background: #e7eafe !important;
}

.react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--in-range),
.react-datepicker__month-text--in-selecting-range:not(.react-datepicker__day--in-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--in-range),
.react-datepicker__quarter-text--in-selecting-range:not(.react-datepicker__day--in-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--in-range),
.react-datepicker__year-text--in-selecting-range:not(.react-datepicker__day--in-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--in-range) {
  background: #e7eafe !important;
  color: #111 !important;
  border-radius: 5px !important;
  line-height: 3 !important;
}

/* Navigation arrows */
.react-datepicker__navigation {
  top: 22px !important;
  width: 32px;
  height: 32px;
  border-radius: 999px;
}

.react-datepicker__navigation:hover {
  background: #f1f1f1;
  line-height: 3 !important;
}

.tab-underline {
  position: relative;
}

.tab-underline::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -1px;
  height: 1.3px;
  width: 0%;
  background: black;
  transition: width 0.6s ease;
}

.tab-underline.active::after {
  width: 100%;
}

.testimonial .swiper-wrapper {
  overflow-y: visible !important;
  padding: 3rem 0rem;
}

.hero-nav-btn {
  background-size: cover;
  background-repeat: no-repeat;
  height: 246px;
}

.hero-nav-left {
  inset: 50% auto 0% -4px;
  background-position: right;
}

.hero-nav-right {
  inset: 50% -4px 0% auto;
  background-position: left;
}

.react-datepicker__day-name,
.react-datepicker__day,
.react-datepicker__time-name {
  width: 2.5rem !important;
}

/* MOBILE OVERRIDES */
@media (max-width: 768px) {
  .hero-nav-left {
    inset: 66% auto 0% -5px;
  }

  .hero-nav-right {
    inset: 66% -5px 0% auto;
  }

}

@keyframes float {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-12px);
  }

  100% {
    transform: translateY(0);
  }
}

.font-script {
  font-family: "Tangerine", cursive;
  ;
}

.animate-float {
  animation: float 6s ease-in-out infinite;
}

img {
  backface-visibility: hidden;
}

@keyframes marquee-left {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(-50%);
  }
}

@keyframes marquee-right {
  0% {
    transform: translateX(-50%);
  }
  100% {
    transform: translateX(0%);
  }
}

.animate-marquee-left {
  animation: marquee-left linear infinite;
}

.animate-marquee-right {
  animation: marquee-right linear infinite;
}

@media (max-width:768px) {
  .font-mona-narrow{
    font-size: 8rem;
        font-weight: bold;
  }
}
@media (max-width:480px) {
  .font-mona-narrow{
    font-size: 3rem;
        font-weight: bold !important;
  }
}
@media (max-width:376px) {
  .font-mona-narrow{
    font-size: 3rem;
        font-weight: bold !important;
  }
}
@media (max-width:321px) {
  .font-mona-narrow{
    font-size: 3rem;
    font-weight: bold !important;
  }
}

